--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <parent>
         <artifactId>jdbi3-parent</artifactId>
         <groupId>org.jdbi</groupId>
-        <version>3.5.1</version>
+        <version>3.18.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jdbi3-oracle12</artifactId>
-    <version>3.6.0-SNAPSHOT</version>
-    <name>jdbi3 Oracle 12</name>
+    <artifactId>jdbi3-oracle</artifactId>
+    <version>3.18.0-SNAPSHOT</version>
+    <name>jdbi3 Oracle</name>
     <description>Jdbi Oracle-specific features</description>
     <url>http://jdbi.org/</url>
 
@@ -42,8 +42,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.oracle.jdbc</groupId>
-            <artifactId>ojdbc7</artifactId>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc10</artifactId>
+            <version>19.8.0.0</version>
         </dependency>
 
         <dependency>
@@ -59,19 +60,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </releases>
-            <id>maven.oracle.com</id>
-            <name>oracle-maven-repo</name>
-            <url>https://maven.oracle.com</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
 
     <build>
         <pluginManagement>
