--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>jdbi3-parent</artifactId>
         <groupId>org.jdbi</groupId>
-        <version>3.29.0</version>
+        <version>3.29.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jdbi3-oracle12</artifactId>
@@ -32,10 +32,6 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
-    <scm>
-        <tag>v3.29.0</tag>
-    </scm>
 
     <properties>
         <dep.oracle.version>19.14.0.0</dep.oracle.version>
