--- a/pom.xml
+++ b/pom.xml
@@ -16,28 +16,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>jdbi3-parent</artifactId>
-        <groupId>org.jdbi</groupId>
-        <version>3.29.1-SNAPSHOT</version>
+        <artifactId>jdbi3-build-parent</artifactId>
+        <groupId>org.jdbi.internal</groupId>
+        <version>3.30.1-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
+    <version>3.30.1-SNAPSHOT</version>
     <name>jdbi3 Oracle 12</name>
     <description>Jdbi Oracle-specific features</description>
 
-    <licenses>
-        <license>
-            <name>Apache License 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+    <scm>
+        <connection>scm:git:git://github.com/jdbi/jdbi3-oracle12.git</connection>
+        <developerConnection>scm:git:git@github.com:jdbi/jdbi3-oracle12.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/jdbi/jdbi3-oracle12/</url>
+    </scm>
 
     <properties>
+        <dep.jdbi3.version>3.30.1-SNAPSHOT</dep.jdbi3.version>
         <dep.oracle.version>19.14.0.0</dep.oracle.version>
         <moduleName>org.jdbi.v3.oracle12</moduleName>
     </properties>
 
+    <!-- repos are required to access the snapshot deps from the main build -->
     <repositories>
         <repository>
             <releases>
@@ -48,8 +51,8 @@
                 <updatePolicy>always</updatePolicy>
                 <checksumPolicy>fail</checksumPolicy>
             </snapshots>
-            <name>Nexus Snapshots</name>
             <id>snapshots-repo</id>
+            <name>Nexus Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <layout>default</layout>
         </repository>
@@ -64,8 +67,8 @@
                 <updatePolicy>always</updatePolicy>
                 <checksumPolicy>fail</checksumPolicy>
             </snapshots>
-            <name>Nexus Snapshots</name>
             <id>snapshots-repo</id>
+            <name>Nexus Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <layout>default</layout>
         </pluginRepository>
@@ -77,6 +80,13 @@
                 <groupId>com.oracle.database.jdbc</groupId>
                 <artifactId>ojdbc-bom</artifactId>
                 <version>${dep.oracle.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jdbi</groupId>
+                <artifactId>jdbi3-bom</artifactId>
+                <version>${dep.jdbi3.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -126,6 +136,5 @@
             <version>1.17.1</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
