--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <parent>
         <artifactId>jdbi3-build-parent</artifactId>
         <groupId>org.jdbi.internal</groupId>
-        <version>3.30.1-SNAPSHOT</version>
+        <version>3.31.0</version>
     </parent>
 
     <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
-    <version>3.30.1-SNAPSHOT</version>
+    <version>3.31.0-SNAPSHOT</version>
     <name>jdbi3 Oracle 12</name>
     <description>Jdbi Oracle-specific features</description>
 
@@ -35,7 +35,7 @@
     </scm>
 
     <properties>
-        <dep.jdbi3.version>3.30.1-SNAPSHOT</dep.jdbi3.version>
+        <dep.jdbi3.version>3.31.0</dep.jdbi3.version>
         <dep.oracle.version>19.14.0.0</dep.oracle.version>
         <moduleName>org.jdbi.v3.oracle12</moduleName>
     </properties>
