--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
 
     <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
-    <version>3.31.0</version>
+    <version>3.31.1-SNAPSHOT</version>
     <name>jdbi3 Oracle 12</name>
     <description>Jdbi Oracle-specific features</description>
 
     <scm>
         <connection>scm:git:git://github.com/jdbi/jdbi3-oracle12.git</connection>
         <developerConnection>scm:git:git@github.com:jdbi/jdbi3-oracle12.git</developerConnection>
-        <tag>v3.31.0</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/jdbi/jdbi3-oracle12/</url>
     </scm>
 
