--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>jdbi3-build-parent</artifactId>
         <groupId>org.jdbi.internal</groupId>
+        <artifactId>jdbi3-build-parent</artifactId>
         <version>3.33.0</version>
     </parent>
 
@@ -137,4 +137,28 @@
             <layout>default</layout>
         </pluginRepository>
     </pluginRepositories>
+
+    <profiles>
+        <profile>
+            <id>no-docker</id>
+            <activation>
+                <property>
+                    <name>no-docker</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes combine.children="append">
+                                <exclude>**/TestGetGeneratedKeysOracle.*</exclude>
+                                <exclude>**/TestOracleReturning.*</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
