--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -13,12 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v2
-      id: baseline_java
+    - uses: actions/checkout@v3
+
+    - uses: actions/setup-java@v3
       with:
         java-version: 17
         distribution: temurin
-    - name: style
+        cache: maven
+
+    - name: run code checkers
+      env:
+        JDBI_MAVEN_OPTS: "-DskipTests=true -B -fae"
       run: |
-          ./src/build/gh-action-style.sh
+        ./mvnw --version
+        echo $PATH
+        make install
