--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <parent>
         <groupId>org.jdbi.internal</groupId>
         <artifactId>jdbi3-build-parent</artifactId>
-        <version>3.34.0</version>
+        <version>3.35.0-rc1</version>
     </parent>
 
     <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
-    <version>3.34.1-SNAPSHOT</version>
+    <version>3.35.0-rc1-SNAPSHOT</version>
     <name>jdbi3 Oracle 12</name>
     <description>Jdbi Oracle-specific features</description>
 
@@ -35,8 +35,9 @@
     </scm>
 
     <properties>
-        <dep.jdbi3.version>3.34.0</dep.jdbi3.version>
+        <dep.jdbi3.version>3.35.0-rc1</dep.jdbi3.version>
         <dep.oracle.version>19.14.0.0</dep.oracle.version>
+        <dep.testcontainers.version>1.17.6</dep.testcontainers.version>
         <moduleName>org.jdbi.v3.oracle12</moduleName>
     </properties>
 
@@ -99,7 +100,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>oracle-xe</artifactId>
-            <version>1.17.1</version>
+            <version>${dep.testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
