--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,15 @@
     <parent>
         <groupId>org.jdbi.internal</groupId>
         <artifactId>jdbi3-build-parent</artifactId>
-        <version>3.35.0-rc1</version>
+        <version>3.35.0</version>
     </parent>
 
     <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
     <version>3.35.0-rc2-SNAPSHOT</version>
-    <name>jdbi3 Oracle 12</name>
-    <description>Jdbi Oracle-specific features</description>
+
+    <name>jdbi3 oracle12</name>
+    <description>Support for Oracle 12+ specific features.</description>
 
     <scm>
         <connection>scm:git:git://github.com/jdbi/jdbi3-oracle12.git</connection>
@@ -35,7 +36,7 @@
     </scm>
 
     <properties>
-        <dep.jdbi3.version>3.35.0-rc1</dep.jdbi3.version>
+        <dep.jdbi3.version>3.35.0</dep.jdbi3.version>
         <dep.oracle.version>19.14.0.0</dep.oracle.version>
         <dep.testcontainers.version>1.17.6</dep.testcontainers.version>
         <moduleName>org.jdbi.v3.oracle12</moduleName>
