--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.jdbi</groupId>
         <artifactId>jdbi3-build-parent</artifactId>
-        <version>3.38.3</version>
+        <version>3.38.4-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jdbi</groupId>
