update build files

--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <parent>
         <groupId>org.jdbi</groupId>
         <artifactId>jdbi3-build-parent</artifactId>
-        <version>3.42.0</version>
+        <version>3.43.0</version>
     </parent>
 
     <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
-    <version>3.42.1-SNAPSHOT</version>
+    <version>3.43.0-SNAPSHOT</version>
 
     <name>jdbi3 oracle12</name>
     <description>Support for Oracle 12+ specific features.</description>
@@ -57,7 +57,7 @@
         <!-- base version to build against. Must be released before this module can be released. -->
         <dep.jdbi3.version>${project.parent.version}</dep.jdbi3.version>
 
-        <dep.oracle-xe.version>23.2.0.0</dep.oracle-xe.version>
+        <dep.oracle-xe.version>23.3.0.23.09</dep.oracle-xe.version>
         <moduleName>org.jdbi.v3.oracle12</moduleName>
     </properties>
 
@@ -228,9 +228,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <excludes combine.children="append">
-                                <exclude>**/TestGetGeneratedKeysOracle.*</exclude>
-                                <exclude>**/TestOracleReturning.*</exclude>
-                                <exclude>**/TestOutparameterCursor.*</exclude>
+                                <exclude>**/Test*</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
