--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.jdbi</groupId>
     <artifactId>jdbi3-oracle12</artifactId>
-    <version>3.44.1</version>
+    <version>3.44.2-SNAPSHOT</version>
 
     <name>jdbi3 oracle12</name>
     <description>Support for Oracle 12+ specific features.</description>
@@ -31,7 +31,7 @@
     <scm>
         <connection>scm:git:git://github.com/jdbi/jdbi3-oracle12.git</connection>
         <developerConnection>scm:git:git@github.com:jdbi/jdbi3-oracle12.git</developerConnection>
-        <tag>v3.44.1</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/jdbi/jdbi3-oracle12/</url>
     </scm>
 
